--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next build && next export",
-    "deploy": "next build && next export && touch out/.nojekyll && gh-pages -d out -t true"
+    "export": "next export"
   },
   "dependencies": {
     "0g": "^0.4.2",
