--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           cd frontend
           npm install
+          npm install next@latest
 
       - name: Build and Export
         run: |
