--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,11 @@
     "export": "next export"
   },
   "dependencies": {
-    "0g": "^0.4.2",
     "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18",
-    "vercel": "^37.2.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "gh-pages": "^6.0.0"
   }
 }
