--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,15 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "export": "next export"
+    "start": "next start"
   },
   "dependencies": {
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18"
-  },
-  "devDependencies": {
-    "gh-pages": "^6.0.0"
   }
 }
